# lesmenuires

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
apps/api/migrations/: 0001_init.sql  0002_seed.sql  0003_admin.sql  0004_media.sql  0005_season.sql  0006_payment.sql  0007_payment_table.sql  0008_booking_card_refs.sql  0009_booking_cancel.sql  0010_cart_reminder.sql  0011_customer_address.sql  0012_customer_session.sql  0013_property_stay_info.sql  0014_magic_link.sql  0015_status_constraints.sql  0016_scheduler_retry.sql  0017_customer_dedup_cart_expiry.sql  0018_booking_payment_flag.sql  0019_contract_signature.sql  0020_tourist_tax.sql  0021_balance_prenotify.sql  0022_manual_bookings.sql  0023_email_log.sql  0024_tourist_tax_included.sql  0025_booking_notes.sql  0026_week_date_check.sql  0027_no_double_booking.sql  0028_contract_text.sql  0029_arrival_reminder.sql  0030_email_automation.sql  0031_automation_recipient.sql  0032_contact_note.sql  0033_admin_accounts.sql  0034_admin_invite_reset.sql  0035_country_iso.sql  0036_contract_sign_link.sql  0037_owner_info.sql  0038_email_overrides.sql  0039_reviews.sql  0040_ical_token.sql  (+21 more)
apps/api/src/: accounting.rs  admin.rs  campaigns.rs  chat.rs  email.rs  error.rs  i18n.rs  ical.rs  main.rs  media.rs  payments.rs  pricing.rs  rate.rs  scheduler.rs
apps/web/: .dockerignore  .env.example  .gitignore  (+7 more)
docs/: DEPLOY.md  PLAN.md
infra/: Caddyfile  docker-compose.prod.yml  docker-compose.yml
(+104 files in other folders)
